# metric_frame

./: .env.prod  .gitignore  .vercelignore  COMPLETE_FIX_SUMMARY.md  LICENSE  README.md  ai_models_documentation.md  checksums.sha256  dev.sh  docker-compose.prod.yml  docker-compose.yml  install.sh  quickstart.sh  test_catalog_upload.csv  test_metrics_simple.csv  vercel.json
backend/: .env.example  alembic.ini  desktop_entry.py  desktop_launcher.py  desktop_main.py  metricframe-backend.spec  metricframe.spec  populate_csf_data.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  001_multi_framework_initial.py  002_add_ai_provider_tables.py  002_add_csf_fields.py  003_add_demo_tables.py  003_add_metric_numbers.py  004_add_demo_ai_chat_columns.py  004_fix_csf_function_enum.py  005_add_app_settings_table.py  005_add_single_active_config_constraint.py  006_merge_heads.py  007_add_subscriptions_table.py  008_add_metric_versions_table.py  009_add_user_roles.py  010_add_business_impact_column.py  011_add_catalog_item_enhancement_columns.py  012_add_user_auth_fields.py  013_add_password_recovery_fields.py  1543f8b62089_add_risk_definition_column.py  bc65175e8b7d_add_metric_catalog_tables_for_bring_.py
backend/scripts/: populate_business_impact.py
backend/src/: __init__.py  db.py  main.py  models.py  schemas.py
backend/src/data/: ai_rmf_sample_metrics.json  backfill_csf_data.py  complete_csf_mappings.py  csf_2_0_sample_metrics.json  generate_enhanced_csv.py  metrics_csf_mapping.py  (+3 more)
backend/tests/: conftest.py
(+224 files in other folders)
